--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body
 {
-  background-image: url("../images/ground10.gif");
+  background-image: url("../images/background.gif");
   font-family: 'Courier New', arial;
 }
 
